--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
     <div class="content">
       <h2 class="good">✓ pisz w taki!</h2>
-      <p>jak widzisz osoba na screenshocie po prawo napisala wprost czy mam link oraz odrazu powiedziala o jaki chodzi odrazu wyslalem ten link i calosc zakonczyla sie w trzech wiadomosciach liczac podziekowania</p>
+      <p>jak widzisz osoba na screenshocie po lewo napisala wprost czy mam link oraz odrazu powiedziala o jaki chodzi odrazu wyslalem ten link i calosc zakonczyla sie w trzech wiadomosciach liczac podziekowania</p>
     </div>
   </section>
 
@@ -97,3 +97,4 @@ reveals.forEach(el => observer.observe(el));
 
 </body>
 </html>
+
